Added new sync test methods.

--- a/Source/FileIOTest.SL81/FileIOTest.SL81.csproj
+++ b/Source/FileIOTest.SL81/FileIOTest.SL81.csproj
@@ -99,6 +99,9 @@
       <Link>MainPage.xaml.cs</Link>
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="..\FileIOTest.WP8\TaskExtensions.cs">
+      <Link>TaskExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\FileExistsTester.cs">
       <Link>Test\FileExistsTester.cs</Link>
     </Compile>
@@ -114,14 +117,23 @@
     <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromApplicationUriAsyncTester.cs">
       <Link>Test\StorageFileGetFileFromApplicationUriAsyncTester.cs</Link>
     </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromApplicationUriSyncTester.cs">
+      <Link>Test\StorageFileGetFileFromApplicationUriSyncTester.cs</Link>
+    </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromPathAsyncTester.cs">
       <Link>Test\StorageFileGetFileFromPathAsyncTester.cs</Link>
+    </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromPathSyncTester.cs">
+      <Link>Test\StorageFileGetFileFromPathSyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFileAsyncTester.cs">
       <Link>Test\StorageFolderGetFileAsyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFilesAsyncTester.cs">
       <Link>Test\StorageFolderGetFilesAsyncTester.cs</Link>
+    </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFileSyncTester.cs">
+      <Link>Test\StorageFolderGetFileSyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\TestRunner.cs">
       <Link>Test\TestRunner.cs</Link>
