--- a/Source/FileIOTest.Win8/FileIOTest.Win8.csproj
+++ b/Source/FileIOTest.Win8/FileIOTest.Win8.csproj
@@ -103,6 +103,9 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\FileIOTest.WP8\TaskExtensions.cs">
+      <Link>TaskExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\IFileTester.cs">
       <Link>Test\IFileTester.cs</Link>
     </Compile>
@@ -112,14 +115,23 @@
     <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromApplicationUriAsyncTester.cs">
       <Link>Test\StorageFileGetFileFromApplicationUriAsyncTester.cs</Link>
     </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromApplicationUriSyncTester.cs">
+      <Link>Test\StorageFileGetFileFromApplicationUriSyncTester.cs</Link>
+    </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromPathAsyncTester.cs">
       <Link>Test\StorageFileGetFileFromPathAsyncTester.cs</Link>
+    </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromPathSyncTester.cs">
+      <Link>Test\StorageFileGetFileFromPathSyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFileAsyncTester.cs">
       <Link>Test\StorageFolderGetFileAsyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFilesAsyncTester.cs">
       <Link>Test\StorageFolderGetFilesAsyncTester.cs</Link>
+    </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFileSyncTester.cs">
+      <Link>Test\StorageFolderGetFileSyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\TestRunner.cs">
       <Link>Test\TestRunner.cs</Link>
