--- a/Source/FileIOTest.Win81.WindowsPhone/FileIOTest.WP81.csproj
+++ b/Source/FileIOTest.Win81.WindowsPhone/FileIOTest.WP81.csproj
@@ -88,6 +88,9 @@
       <Link>MainPage.xaml.cs</Link>
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="..\FileIOTest.WP8\TaskExtensions.cs">
+      <Link>TaskExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\IFileTester.cs">
       <Link>Test\IFileTester.cs</Link>
     </Compile>
@@ -97,14 +100,23 @@
     <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromApplicationUriAsyncTester.cs">
       <Link>Test\StorageFileGetFileFromApplicationUriAsyncTester.cs</Link>
     </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromApplicationUriSyncTester.cs">
+      <Link>Test\StorageFileGetFileFromApplicationUriSyncTester.cs</Link>
+    </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromPathAsyncTester.cs">
       <Link>Test\StorageFileGetFileFromPathAsyncTester.cs</Link>
+    </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFileGetFileFromPathSyncTester.cs">
+      <Link>Test\StorageFileGetFileFromPathSyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFileAsyncTester.cs">
       <Link>Test\StorageFolderGetFileAsyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFilesAsyncTester.cs">
       <Link>Test\StorageFolderGetFilesAsyncTester.cs</Link>
+    </Compile>
+    <Compile Include="..\FileIOTest.WP8\Test\StorageFolderGetFileSyncTester.cs">
+      <Link>Test\StorageFolderGetFileSyncTester.cs</Link>
     </Compile>
     <Compile Include="..\FileIOTest.WP8\Test\TestRunner.cs">
       <Link>Test\TestRunner.cs</Link>
